--- a/app/globals.css
+++ b/app/globals.css
@@ -14,8 +14,8 @@
 :root {
   --background: hsl(0, 0%, 95%);
   --foreground: hsl(0, 0%, 0%);
-  --card: oklch(1 0 0);
-  --card-foreground: oklch(0.129 0.042 264.695);
+  --card: hsl(0, 0%, 100%);
+  --card-foreground: hsl(0, 0%, 0%);
   --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.129 0.042 264.695);
   --primary: hsl(204, 100%, 48%);
@@ -50,8 +50,8 @@
 .dark {
   --background: hsl(0, 0%, 0%);
   --foreground: hsl(0, 0%, 100%);
-  --card: oklch(0.129 0.042 264.695);
-  --card-foreground: oklch(0.984 0.003 247.858);
+  --card: hsl(240, 10%, 4%);
+  --card-foreground: hsl(0, 0%, 100%);
   --popover: oklch(0.129 0.042 264.695);
   --popover-foreground: oklch(0.984 0.003 247.858);
   --primary: hsl(204, 100%, 48%);
