--- a/app/globals.css
+++ b/app/globals.css
@@ -65,8 +65,8 @@
   --accent-foreground: oklch(0.984 0.003 247.858);
   --destructive: oklch(0.396 0.141 25.723);
   --destructive-foreground: oklch(0.637 0.237 25.331);
-  --border: hsl(240, 5%, 65%);
-  --input: hsl(240, 5%, 65%);
+  --border: hsl(0, 0%, 100%, 0.2);
+  --input: hsl(0, 0%, 100%, 0.2);
   --ring: hsl(0, 0%, 100%);
   --chart-1: oklch(0.488 0.243 264.376);
   --chart-2: oklch(0.696 0.17 162.48);
